tests/test_data/CodeStructureSnippets/good/var_def.ifj21
require "ifj21"
function main()
    local vysl : integer = 0
    local x:integer=1local y:string="ahoj"
end
main()