tests/test_data/CodeStructureSnippets/bad/sem_err_4.6.ifj21
require "ifj21"
function main()
    local x : integer = 1
    local y : integer = 2
    local vysl : string = x + y
end
main()
